# AI-Agents

./: .gitignore  1 Linear Regression with House Prediction example (getting_started).ipynb  README.md
1.0 lullaby_agent/: README.md  requirements.txt
Project 0 - Basic Chatbot/: app.py
Project 0.1 - Find Similar Words App for Kids/: app.py
Project 1 - Lullaby Generator Agent/: app.py
Project 1.2 - Query Content Generation Tool/: app.py
Project 1: Lullaby Generator Agent/: README.md
Project 2 - Bill Extractor AI Assistant/: README.md  app.py  helpers.py  requirements.txt
Project 3 - Image to Recipe Generator/: README.md  app.py  requirements.txt
Project 8 Customer Care Call Summary Alert/: utils.py
search-agent/: README.md  main.py  pyproject.toml  schemas.py  tools.py
